--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ button:hover {
     text-align: center;
     color: hsl(158, 36%, 37%);
     margin-top: -31px;
-    font-size: 1em;
+    font-size: 11px;
     font-weight: 400;
 }
 
