--- a/style.css
+++ b/style.css
@@ -5,36 +5,33 @@
 }
 
 .container {
-    width: 100%;
-    display: grid;
+    display: flex;
     min-height: 100vh;
     justify-content: center;
     align-content: center;
+    place-items: center;
     background: hsl(30, 38%, 92%);
     
 }
 
 .details {
-    width: 410px;
-    height: 350px;
+   
     display: flex;
     align-items: center;
     justify-content: center;
-    background: hsl(0, 0%, 100%);
-    border-radius: 3em;
+    flex-direction: row;
     
 }
 
 .left, .right {
-    width: 100%;
-    height: 100%;
+    width: 320px;
+    height: 400px;
     display: flex;   
     background: hsl(0, 0%, 100%);
    
 }
 
 .left {
-    width: 50%;
     background: hsl(0, 0%, 100%);
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
@@ -43,20 +40,18 @@
 
 img {
     width: 320px;
-    height: 350px;
+    /* height: 400px; */
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
 }
 
 .right {
-    width: 50%;
     font-size: 1em;
     font-weight: 300;
     display: flex;
     flex-direction: column;
     text-align: left;
     padding-top: 16px;
-    padding-bottom: 16px;
     padding-left: 20px;
     padding-right: 20px;
     background: hsl(0, 0%, 100%);
@@ -74,8 +69,7 @@ img {
 }
 
 .right h3 {
-    width: 160px;
-    font-size: 1.7em;
+    font-size: 2.8em;
     font-weight: 600;
     color: hsl(212, 21%, 14%);
     line-height: 1.01em;
@@ -84,10 +78,7 @@ img {
 
 .right .d {
     color: hsl(228, 12%, 48%);
-    margin-bottom: .3em;
-    font-size: .8em;
-    width: 170px;
-    line-height: 1.2em;
+    font-size: 1.2em;
 }
 
 .right .price {
@@ -96,24 +87,23 @@ img {
     display: flex;
     gap: 13px;
     color: hsl(158, 36%, 37%); 
-    padding: 5px 0 8px;
-    margin-top: 10px;
+    padding: 1px 0 9px;
+    margin-top: 8px;
     margin-bottom: .8em;
 }
 
 .price span {
     font-size: .32em;
-    margin-top: 1.1em;
+    margin-top: 1em;
 }
 
 button {
-    width: 100%;
     outline: 0;
     border: 1px solid hsl(158, 36%, 37%);
     background: hsl(158, 36%, 37%); 
     padding: 11px 24px;
     border-radius: .4em;
-    margin-top: -14px;
+    margin-top: -2.3em;
     cursor: pointer;
     color: hsl(0, 0%, 100%);
     display: flex;
@@ -143,4 +133,20 @@ button:hover {
     text-decoration: none;
     color: hsl(228, 45%, 44%);
 
+}
+
+@media screen and (max-width: 600px) {
+
+    .details {
+        flex-direction: column;
+       
+    }
+
+    .left, .right {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        height: 320px;
+    }
+    
 }
