--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     background: hsl(30, 38%, 92%);
     min-height: 100vh;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,14 +34,13 @@
 
 .left {
     width: 50%;
-
-}
-
-.left img {
-    width: 100%;
-    height: 100%;
+    background-image: url(images/image-product-desktop.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
+
 }
 
 .right {
@@ -107,6 +106,7 @@
     margin-bottom: 2em;
     font-size: .86em;
     cursor: pointer;
+    place-content: center;
     
 }
 
@@ -134,12 +134,34 @@
     color: hsl(158, 36%, 37%);
 }
 
-@media screen and (max-width: 500px) {
-    
+@media screen and (max-width: 650px) {
     .details {
-        /* width: auto;
+        width: 320px;
         height: auto;
-        display: flex; */
+        display: flex;
+        align-items: center;
+        background: hsl(0, 0%, 100%);
+        border-radius: .5em;
         flex-direction: column;
+    
+    }
+    
+    .left, .right {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        
+    }
+
+    .left {
+        /* width: 50%; */
+        background-image: url(images/image-product-mobile.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-top-left-radius: .5em;
+        border-bottom-left-radius: .5em;
+    
     }
 }
