--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@
 
 .left {
     width: 50%;
-    
-
 }
 
 .left .ir {
@@ -68,14 +66,17 @@
 .right .p {
     color: hsl(212, 21%, 14%);
     font-size: 2em;
-    font-weight: 800;
+    font-family: "Montserrat";
+    font-family: "Fraunces";
+    font-weight: 700;
     
 }
 
 .right .d {
-    font-size: 1em;
-    font-weight: 200;
-    padding-top: 1em;
+    font-size: .95em;
+    font-weight: 300;
+    font-family: "Montserrat";;
+    padding-top: .7em;
     line-height: 1.4em;
     color: hsl(228, 12%, 48%);
     padding-bottom: .6em;
@@ -84,6 +85,8 @@
 .right .price {
     color: hsl(158, 36%, 37%);
     font-size: 2em;
+    font-family: "Fraunces";
+    font-weight: 700;
     padding-bottom: .3em;
     display: flex;
     gap: 20px;
@@ -141,7 +144,7 @@
 
 @media screen and (max-width: 650px) {
     .details {
-        width: 500px;
+        width: 90%;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -152,19 +155,21 @@
         display: none;
     }
 
-    .left .im {
+    .left, .right {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 230px;
-        height: 230px;
-
+        width: 90%;
+        flex-direction: column;
     }
 
-    .right button {
-        padding: 1em 1.2em;
+    .left {
+        width: 383px;
     }
-    
-   
-    .
+
+    .left .im{
+        display: flex;
+        border-top-left-radius: 1.3em;
+        border-top-right-radius: 1.3em;
+        padding: 0 1em;
+    }
+
 }
